att: Component Contato concluido

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://viipaxx.github.io/Portfolio/",
+  "homepage": "https://viipaxx.github.io/Portfolio",
   "name": "vitor-paz",
   "version": "0.1.0",
   "private": true,
